# Functional_programing_FEP-23

lab01/: README.md  SOLUTION.md  app.py  core.py  pyproject.toml  requirements.txt  ~$ЛР_1.docx  ЛР_1.docx
lab01/tests/: test_core.py
lab02/: README.md  pyproject.toml
lab02/lab2/: lab2.py  main.py  sample_data.json
lab02/lab2/tests/: conftest.py  test_lab2.py
lab03/: README.md  pyproject.toml  requirements.txt
lab03/lab03/: core.py  model.py
lab03/lab03/tests/: conftest.py  test_immutability.py
lab04/: README.md  pyproject.toml
lab04/lab04/: algorithms.py
lab04/lab04/tests/: test_fib.py  test_quicksort.py  test_tree.py
lab05/: ASSIGNMENT.md  README.md  main.py  streams.py  ЛР_5.docx
lab05/tests/: conftest.py  test_accumulate.py  test_fib_stream.py  test_lazy_behavior.py  test_sliding_window.py  test_take_drop.py
lab06/: README.md  closures.py  decorators.py  mypy.ini  requirements.txt  test_cached.py  test_retries.py  test_timed.py
lab07/: README.md  lab07_funtools_operator.py
lab08/: README.md  eval_.py  expr.py  main.py  mypy.ini  pretty.py  pyproject.toml
lab08/tests/: test_expr.py
lab09/: README.md  lab09_result_maybe.ipynb  lab09_result_maybe.py
lab10/: README.md  lab10_etl_core.py  lab10_etl_io.py  lab10_etl_notebook.ipynb  lab10_out.csv  lab10_out.json  lab10_sample.csv  lab10_sample.json  lab10_tests.py
