[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab08-adt"
version = "0.1.0"
description = "Lab 08: ADT in Python with Union, Literal, Protocol, match/case"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
